# Learn-OpenCV-4-By-Building-Projects-Second-Edition

./: README.md
Chapter_02/: CMakeLists.txt  README.md  main.cpp  sample1.cpp  sample2.cpp  sample3.cpp
Chapter_03/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp
Chapter_04/: CMakeLists.txt  README.md  main.cpp
Chapter_05/: CMakeLists.txt  README.md  main.cpp
Chapter_05/data/: light.pgm  test.pgm  test_noise.pgm
Chapter_05/utils/: MultipleImageWindow.cpp  MultipleImageWindow.h
Chapter_06/: CMakeLists.txt  README.md  main.cpp
Chapter_06/data/: pattern.pgm  test.pgm  test2.pgm
Chapter_06/data/nut/: tuerca_0000.pgm  tuerca_0001.pgm  tuerca_0002.pgm  tuerca_0003.pgm  tuerca_0004.pgm  tuerca_0005.pgm  tuerca_0006.pgm  tuerca_0007.pgm  tuerca_0008.pgm  tuerca_0009.pgm  tuerca_0010.pgm  tuerca_0011.pgm  tuerca_0012.pgm  tuerca_0013.pgm  tuerca_0014.pgm  tuerca_0015.pgm  tuerca_0016.pgm  tuerca_0017.pgm  tuerca_0018.pgm  tuerca_0019.pgm  tuerca_0020.pgm  tuerca_0021.pgm  tuerca_0022.pgm  tuerca_0023.pgm  tuerca_0024.pgm  tuerca_0025.pgm  tuerca_0026.pgm  tuerca_0027.pgm  tuerca_0028.pgm  tuerca_0029.pgm  tuerca_0030.pgm  tuerca_0031.pgm  tuerca_0032.pgm  tuerca_0033.pgm  tuerca_0034.pgm  tuerca_0035.pgm  tuerca_0036.pgm  tuerca_0037.pgm  tuerca_0038.pgm  tuerca_0039.pgm  (+124 more)
Chapter_06/data/ring/: arandela_0000.pgm  arandela_0001.pgm  arandela_0002.pgm  arandela_0003.pgm  arandela_0004.pgm  arandela_0005.pgm  arandela_0006.pgm  arandela_0007.pgm  arandela_0008.pgm  arandela_0009.pgm  arandela_0010.pgm  arandela_0011.pgm  arandela_0012.pgm  arandela_0013.pgm  arandela_0014.pgm  arandela_0015.pgm  arandela_0016.pgm  arandela_0017.pgm  arandela_0018.pgm  arandela_0019.pgm  arandela_0020.pgm  arandela_0021.pgm  arandela_0022.pgm  arandela_0023.pgm  arandela_0024.pgm  arandela_0025.pgm  arandela_0026.pgm  arandela_0027.pgm  arandela_0028.pgm  arandela_0029.pgm  arandela_0030.pgm  arandela_0031.pgm  arandela_0032.pgm  arandela_0033.pgm  arandela_0034.pgm  arandela_0035.pgm  arandela_0036.pgm  arandela_0037.pgm  arandela_0038.pgm  arandela_0039.pgm  (+61 more)
Chapter_06/data/screw/: tornillo_0000.pgm  tornillo_0001.pgm  tornillo_0002.pgm  tornillo_0003.pgm  tornillo_0004.pgm  tornillo_0005.pgm  tornillo_0006.pgm  tornillo_0007.pgm  tornillo_0008.pgm  tornillo_0009.pgm  tornillo_0010.pgm  tornillo_0011.pgm  tornillo_0012.pgm  tornillo_0013.pgm  tornillo_0014.pgm  tornillo_0015.pgm  tornillo_0016.pgm  tornillo_0017.pgm  tornillo_0018.pgm  tornillo_0019.pgm  tornillo_0020.pgm  tornillo_0021.pgm  tornillo_0022.pgm  tornillo_0023.pgm  tornillo_0024.pgm  tornillo_0025.pgm  tornillo_0026.pgm  tornillo_0027.pgm  tornillo_0028.pgm  tornillo_0029.pgm  tornillo_0030.pgm  tornillo_0031.pgm  tornillo_0032.pgm  tornillo_0033.pgm  tornillo_0034.pgm  tornillo_0035.pgm  tornillo_0036.pgm  tornillo_0037.pgm  tornillo_0038.pgm  tornillo_0039.pgm  (+103 more)
Chapter_06/utils/: MultipleImageWindow.cpp  MultipleImageWindow.h
Chapter_07/: CMakeLists.txt  README.md  earDetector.cpp  overlayFacemask.cpp  overlayMoustache.cpp  overlayNose.cpp  overlaySunglasses.cpp
Chapter_08/: CMakeLists.txt  README.md  backgroundSubtraction.cpp  dilation.cpp  erosion.cpp  frameDifferencing.cpp  morphologicalOperations.cpp
Chapter_09/: CMakeLists.txt  README.md  camshiftTracker.cpp  coloredObjectTracker.cpp  farnebackTracker.cpp  goodFeaturesToTrack.cpp  harrisCornersTracker.cpp  lucasKanadeTracker.cpp
Chapter_10/: CMakeLists.txt  README.md  conanfile.txt  segment.cpp  segmentOcr.cpp  segmentOcrHigh.cpp
Chapter_11/: CMakeLists.txt  README.md  conanfile.txt  detection.cpp  ocr.cpp
Chapter_12/: CMakeLists.txt  README.md  main.cpp
